--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ span{
 	display: flex;
 	justify-content: start;
 }
+.justify_around{
+	display: flex;
+	justify-content: space-around;
+}
 .search_blok{
 	margin-left: 30px;
 	width: 573px;
@@ -184,10 +188,99 @@ font-weight: 600;
 	justify-content: center;
 	align-items: center;
   }
+  .main{
+	padding-top: 30px;
+  }
 
   .swiper-slide img {
 	display: block;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+  }
+
+  .clock {
+	padding: 5px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 15px;
+	text-align: center;
+	color: #FF7A00;
+	background: rgba(255, 122, 0, 0.15);
+	border-radius: 5px;
+	margin: auto 0;
+  }
+  .main_right{
+
+	width: 360px;
+	height: 520px;
+	background: #FFFFFF;
+  }
+  .main_img {
+	display: flex;
+	justify-content: center;
+	margin:  auto;
+  }
+  .main_right p{
+	font-weight: 400;
+font-size: 12px;
+line-height: 15px;
+
+margin-left:20px;
+color: rgba(28, 41, 77, 0.5);
+
+  }
+  .main_right h4{
+	font-weight: 500;
+font-size: 14px;
+line-height: 19px;
+/* or 136% */
+margin-left:20px;
+
+color: #1C294D;
+
+  }
+
+  .basket{
+	margin-left: 30px;
+	background: #FFFFFF;
+width: 150px;
+height: 40px;
+border: 1px solid #EEEEEE;
+border-radius: 5px;
+  }
+  .basket:hover{
+	background:#FF7A00 ;
+
+  }
+  .basket i {
+
+	color: #FF7A00;
+  }
+ .basket i:hover {
+	color: #1C294D;
+  }
+
+  .basket span{
+	font-weight: 500;
+font-size: 14px;
+line-height: 15px;
+margin-left: 5px;
+color: #1C294D;
+  }
+
+  .flag{
+	
+background: #FFFFFF;
+width: 40px;
+height: 40px;
+border: 1px solid #EEEEEE;
+border-radius: 5px;
+  }
+  .flag:hover{
+	background:#FF7A00 ;
+  }
+
+  .flag i {
+	margin-left: 5px;
   }
